@@ -182,6 +182,9 @@ Branch YARN-2928: Timeline Server Next Generation: Phase 1
     YARN-4178. [storage implementation] app id as string in row keys can cause
     incorrect ordering (Varun Saxena via sjlee)
 
+    YARN-4297. TestJobHistoryEventHandler and TestRMContainerAllocator failing
+    on YARN-2928 branch (Varun Saxena via sjlee)
+
 Trunk - Unreleased
 
   INCOMPATIBLE CHANGES
